(2.75RC) blender crashes when I choose 'Refresh DataBlock Previews'. #45041

Closed
opened 2015-06-12 02:12:00 +02:00 by perfection cat · 12 comments

System Information
windows XP/SP3 32bits

Blender Version
Broken: version 2.75 (sub 0), branch b'master', commit date b'2015-06-10' b'19:23', hash b'087c82e', b'Release'
Worked: unknown

Short description of error
Blender crashes when I choose 'Refresh DataBlock Previews'.
Exact steps for others to reproduce the error
Run blender.
Choose 'Refresh DataBlock Previews'.

**System Information** windows XP/SP3 32bits **Blender Version** Broken: version 2.75 (sub 0), branch b'master', commit date b'2015-06-10' b'19:23', hash b'087c82e', b'Release' Worked: unknown **Short description of error** Blender crashes when I choose 'Refresh DataBlock Previews'. **Exact steps for others to reproduce the error** Run blender. Choose 'Refresh DataBlock Previews'.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sindra1961

Added subscriber: @sindra1961
Author

An error was output.
Error: EXCEPTION_ACCESS_VIOLATION

An error was output. Error: EXCEPTION_ACCESS_VIOLATION
Author

The same phenomenon occurs in the following versions.
version 2.74 (sub 5), branch b'master', commit date b'2015-06-09' b'16:25', hash b'45d4fad', b'Release'

The same phenomenon occurs in the following versions. version 2.74 (sub 5), branch b'master', commit date b'2015-06-09' b'16:25', hash b'45d4fad', b'Release'
Author

It does not occur in 2.74(sub0).

It does not occur in 2.74(sub0).

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2015-06-12 09:39:15 +02:00

Confirmed, checking.

Confirmed, checking.

This issue was referenced by 520fb5c8cd

This issue was referenced by 520fb5c8cd3d57e6c2b5676aae73008a1a038300

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

@Bastien Montagne (mont29):
If a daily build version is distributed, I confirm it.

@Bastien Montagne (mont29): If a daily build version is distributed, I confirm it.
Author

@Bastien Montagne (mont29):
I confirmed that this problem was resolved.
Thanks.
version 2.75 (sub 1), branch b'master', commit date b'2015-06-14' b'00:05', hash b'208a917', b'Release'

@Bastien Montagne (mont29): I confirmed that this problem was resolved. Thanks. version 2.75 (sub 1), branch b'master', commit date b'2015-06-14' b'00:05', hash b'208a917', b'Release'

This issue was referenced by 033c532bfb

This issue was referenced by 033c532bfb71f34d7cf9d4a1e2075f6ac50a40a2
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45041
No description provided.