Fix T45041: (2.75RC) blender crashes when I choose 'Refresh DataBlock Previews'.

Not sure where this sneaked in, but we for sure need a valid context (otherwise
we'd need to pass a Main alog too).

This is to be backported to final 2.75.